--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.mini.css">
-    <!-- <link rel="stylesheet" href="css/normolize.css">
-    <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/normolize.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,12 +18,12 @@
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
                         <a href="#" class="sitenav__link">
-                            HOME
+                            home
                         </a>
                     </li>
                     <li class="sitenav__item">
                         <a href="#" class="sitenav__link">
-                            ABOUT US
+                            about us
                         </a>
                     </li>
                     <li class="sitenav__item">
@@ -37,14 +36,18 @@
         </div>
     </header>
     <main class="site-main">
+        <h1 class="visually-hidden">coffeeroasters</h1>
         <section class="hero-section">
-            <div class="container hero-container">
-                <div class="hero-content">
-                    <p class="hero-heading">
+            <h2 class="visually-hidden">
+                coffee
+            </h2>
+            <div class="container hero__container">
+                <div class="hero__content">
+                    <p class="hero__heading">
                         Great coffee
     made simple.
                     </p>
-                    <p class="hero-desc">
+                    <p class="hero__desc">
                         Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
                     </p>
                     <a href="#" class="primary-link">Create your plan</a>
@@ -52,68 +55,68 @@
             </div>
         </section>
         <section class="coffeetypes">
-            <div class="container coffetypes-container">
-                <ul class="coffeetypes-list">
-                    <li class="coffeetypes-item">
-                        <img src="img/gran-espresso.png" alt="" class="coffeetypes-item-img" width="255" height="193">
-                        <h3 class="coffeetypes-item__heading">Gran Espresso</h3>
-                        <p class="coffeetypes-item__desc">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+            <div class="container coffetypes__container">
+                <ul class="coffeetypes__list">
+                    <li class="coffeetypes__item">
+                        <img src="img/gran-espresso.png" alt="" class="coffeetypes__item-img" width="255" height="193">
+                        <h3 class="coffeetypes__item-heading">Gran Espresso</h3>
+                        <p class="coffeetypes__item-desc">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
                     </li>
-                    <li class="coffeetypes-item">
-                        <img src="img/planalto.png" alt="" class="coffeetypes-item-img" width="255" height="193">
-                        <h3 class="coffeetypes-item__heading">Planalto</h3>
-                        <p class="coffeetypes-item__desc">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                    <li class="coffeetypes__item">
+                        <img src="img/planalto.png" alt="" class="coffeetypes__item-img" width="255" height="193">
+                        <h3 class="coffeetypes__item-heading">Planalto</h3>
+                        <p class="coffeetypes__item-desc">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
                     </li>
-                    <li class="coffeetypes-item">
-                        <img src="img/picollo.png" alt="" class="coffeetypes-item-img" width="255" height="193">
-                        <h3 class="coffeetypes-item__heading">Picollo</h3>
-                        <p class="coffeetypes-item__desc">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                    <li class="coffeetypes__item">
+                        <img src="img/picollo.png" alt="" class="coffeetypes__item-img" width="255" height="193">
+                        <h3 class="coffeetypes__item-heading">Picollo</h3>
+                        <p class="coffeetypes__item-desc">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
                     </li>
-                    <li class="coffeetypes-item">
-                        <img src="img/danche.png" alt="" class="coffeetypes-item-img" width="255" height="193">
-                        <h3 class="coffeetypes-item__heading">Danche</h3>
-                        <p class="coffeetypes-item__desc">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                    <li class="coffeetypes__item">
+                        <img src="img/danche.png" alt="" class="coffeetypes__item-img" width="255" height="193">
+                        <h3 class="coffeetypes__item-heading">Danche</h3>
+                        <p class="coffeetypes__item-desc">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
                     </li>
                 </ul>
             </div>
         </section>
         <section class="about">
-            <div class="container about-container">
-                <div class="about-heading-wrapper">
-                    <h2 class="about-heading">
+            <div class="container about__container">
+                <div class="about__heading-wrapper">
+                    <h2 class="about__heading">
                         Why choose us?
                     </h2>
-                    <p class="about-desc">
+                    <p class="about__desc">
                         A large part of our role is choosing which particular coffees will be featured 
     in our range. This means working closely with the best coffee growers to give 
     you a more impactful experience on every level.
                     </p>
                 </div>
-                <ul class="about-list">
-                    <li class="about-item">
-                        <img src="img/coffee-bean.svg" alt="" class="about-item-img" width="72" height="72">
-                        <h3 class="about-item__heading">
+                <ul class="about__list">
+                    <li class="about__item">
+                        <img src="img/coffee-bean.svg" alt="" class="about__item-img" width="72" height="72">
+                        <h3 class="about__item-heading">
                             Best quality
                         </h3>
-                        <p class="about-item__desc">
+                        <p class="about__item-desc">
                             Discover an endless variety of the world’s best artisan coffee from each of our roasters.
                         </p>
                     </li>
-                    <li class="about-item">
-                        <img src="img/gift.svg" alt="" class="about-item-img" width="72" height="72">
-                        <h3 class="about-item__heading">
+                    <li class="about__item">
+                        <img src="img/gift.svg" alt="" class="about__item-img" width="72" height="72">
+                        <h3 class="about__item-heading">
                             Exclusive benefits
                         </h3>
-                        <p class="about-item__desc">
+                        <p class="about__item-desc">
                             Special offers and swag when you subscribe, including 30% off your first shipment.
                         </p>
                     </li>
-                    <li class="about-item">
-                        <img src="img/delivery.svg" alt="" class="about-item-img" width="72" height="50">
-                        <h3 class="about-item__heading">
+                    <li class="about__item">
+                        <img src="img/delivery.svg" alt="" class="about__item-img" width="72" height="50">
+                        <h3 class="about__item-heading">
                             Free shipping
                         </h3>
-                        <p class="about-item__desc">
+                        <p class="about__item-desc">
                             We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
                         </p>
                     </li>
@@ -121,36 +124,36 @@
             </div>
         </section>
         <section class="services">
-            <div class="container services-container">
-                <h2 class="services-heading">
+            <div class="container services__container">
+                <h2 class="services__heading">
                     How it works
                 </h2>
-                <ol class="services-list">
-                    <li class="services-item">
-                        <p class="services-item__num">01</p>
-                        <h3 class="services-item__heading">
+                <ol class="services__list">
+                    <li class="services__item">
+                        <p class="services__item-num">01</p>
+                        <h3 class="services__item-heading">
                             Pick your
 coffee
                         </h3>
-                        <p class="services-item__desc">
+                        <p class="services__item-desc">
                             Select from our evolving range of artisan coffees. Our beans are ethically sourced and we pay fair prices for them. There are new coffees in all profiles every month for you to try out.
                         </p>
                     </li>
-                    <li class="services-item">
-                        <p class="services-item__num">02</p>
-                        <h3 class="services-item__heading">
+                    <li class="services__item">
+                        <p class="services__item-num">02</p>
+                        <h3 class="services__item-heading">
                             Choose the frequency
                         </h3>
-                        <p class="services-item__desc">
+                        <p class="services__item-desc">
                             Customize your order frequency, quantity, even your roast style and grind type. Pause, skip or cancel your subscription with no commitment through our online portal.
                         </p>
                     </li>
-                    <li class="services-item">
-                        <p class="services-item__num">03</p>
-                        <h3 class="services-item__heading">
+                    <li class="services__item">
+                        <p class="services__item-num">03</p>
+                        <h3 class="services__item-heading">
                             Receive and enjoy!
                         </h3>
-                        <p class="services-item__desc">
+                        <p class="services__item-desc">
                             We ship your package within 48 hours, freshly roasted. Sit back and enjoy award-winning world-class coffees curated to provide a distinct tasting experience.
                         </p>
                     </li>
@@ -160,20 +163,20 @@ coffee
         </section>
     </main>
     <footer class="site-footer">
-        <div class="container footer-container">
+        <div class="container footer__container">
             <a href="#" class="logo-link">
                 <img src="img/foooter-logo.svg" alt="" class="logo-img" width="236" height="26">
             </a>
-            <nav class="sitenav sitenav-fot">
+            <nav class="sitenav sitenav--fot">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
                         <a href="#" class="sitenav__link">
-                            HOME
+                            home
                         </a>
                     </li>
                     <li class="sitenav__item">
                         <a href="#" class="sitenav__link">
-                            ABOUT US
+                            about us
                         </a>
                     </li>
                     <li class="sitenav__item">
