--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <main class="site-main">
         <h1 class="visually-hidden">coffeeroasters</h1>
-        <section class="hero-section">
+        <section class="hero">
             <h2 class="visually-hidden">
                 coffee
             </h2>
@@ -55,7 +55,7 @@
             </div>
         </section>
         <section class="coffeetypes">
-            <div class="container coffetypes__container">
+            <div class="container coffeetypes__container">
                 <ul class="coffeetypes__list">
                     <li class="coffeetypes__item">
                         <img src="img/gran-espresso.png" alt="" class="coffeetypes__item-img" width="255" height="193">
@@ -163,7 +163,7 @@ coffee
         </section>
     </main>
     <footer class="site-footer">
-        <div class="container footer__container">
+        <div class="container site-footer__container">
             <a href="#" class="logo-link">
                 <img src="img/foooter-logo.svg" alt="" class="logo-img" width="236" height="26">
             </a>
