--- a/index.html
+++ b/index.html
@@ -186,20 +186,20 @@ coffee
                     </li>
                 </ul>
             </nav>
-            <ul class="footer-sm-list">
-                <li class="footer-sm-item">
-                    <a href="https://www.facebook.com/" class="footer-sm-link">
-                        <img src="img/facebook-logo.svg" alt="" class="footer-sm-logo" width="24" height="24">
+            <ul class="site-footer__sm-list">
+                <li class="site-footer__sm-item">
+                    <a href="https://www.facebook.com/" class="site-footer__sm-link">
+                        <img src="img/facebook-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="24">
                     </a>
                 </li>
-                <li class="footer-sm-item">
-                    <a href="https://twitter.com/" class="footer-sm-link">
-                        <img src="img/twitter-logo.svg" alt="" class="footer-sm-logo" width="24" height="20">
+                <li class="site-footer__sm-item">
+                    <a href="https://twitter.com/" class="site-footer__sm-link">
+                        <img src="img/twitter-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="20">
                     </a>
                 </li>
-                <li class="footer-sm-item">
-                    <a href="https://www.instagram.com/" class="footer-sm-link">
-                        <img src="img/instagram-logo.svg" alt="" class="footer-sm-logo" width="24" height="24">
+                <li class="site-footer__sm-item">
+                    <a href="https://www.instagram.com/" class="site-footer__sm-link">
+                        <img src="img/instagram-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="24">
                     </a>
                 </li>
             </ul>
