--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="site-header">
-        <div class="container header-container">
+    <div class="container">
+        <header class="site-header">
+            
             <a href="#" class="logo-link">
                 <img src="img/logo.svg" alt="" class="site-logo" width="236" height="26">
             </a>
@@ -33,55 +34,60 @@
                     </li>
                 </ul>
             </nav>
-        </div>
-    </header>
-    <main class="site-main">
-        <h1 class="visually-hidden">coffeeroasters</h1>
-        <section class="hero">
-            <h2 class="visually-hidden">
-                coffee
-            </h2>
-            <div class="container hero__container">
+        </header>
+        <main class="site-main">
+            <h1 class="visually-hidden">coffeeroasters</h1>
+            <section class="hero">
+                <h2 class="visually-hidden">
+                    coffee
+                </h2>
                 <div class="hero__content">
-                    <p class="hero__heading">
-                        Great coffee
-    made simple.
-                    </p>
-                    <p class="hero__desc">
-                        Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
-                    </p>
-                    <a href="#" class="primary-link">Create your plan</a>
+                        <p class="hero__heading">
+                            Great coffee
+        made simple.
+                        </p>
+                        <p class="hero__desc">
+                            Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
+                        </p>
+                        <a href="#" class="primary-link">Create your plan</a>
                 </div>
-            </div>
-        </section>
-        <section class="coffeetypes">
-            <div class="container coffeetypes__container">
+            </section>
+            <section class="coffeetypes">
+                <h2 class="coffeetypes__heading">
+                    our collection
+                </h2>
                 <ul class="coffeetypes__list">
                     <li class="coffeetypes__item">
                         <img src="img/gran-espresso.png" alt="" class="coffeetypes__item-img" width="255" height="193">
-                        <h3 class="coffeetypes__item-heading">Gran Espresso</h3>
-                        <p class="coffeetypes__item-desc">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                        <div class="coffeetypes__item-content">
+                            <h3 class="coffeetypes__item-heading">Gran Espresso</h3>
+                            <p class="coffeetypes__item-desc">Light and flavorful blend with cocoa and black pepper for an intense experience.</p>
+                        </div>
                     </li>
                     <li class="coffeetypes__item">
                         <img src="img/planalto.png" alt="" class="coffeetypes__item-img" width="255" height="193">
-                        <h3 class="coffeetypes__item-heading">Planalto</h3>
-                        <p class="coffeetypes__item-desc">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                        <div class="coffeetypes__item-content">
+                            <h3 class="coffeetypes__item-heading">Planalto</h3>
+                            <p class="coffeetypes__item-desc">Brazilian dark roast with rich and velvety body, and hints of fruits and nuts.</p>
+                        </div>
                     </li>
                     <li class="coffeetypes__item">
                         <img src="img/picollo.png" alt="" class="coffeetypes__item-img" width="255" height="193">
-                        <h3 class="coffeetypes__item-heading">Picollo</h3>
-                        <p class="coffeetypes__item-desc">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                        <div class="coffeetypes__item-content">
+                            <h3 class="coffeetypes__item-heading">Picollo</h3>
+                            <p class="coffeetypes__item-desc">Mild and smooth blend featuring notes of toasted almond and dried cherry.</p>
+                        </div>
                     </li>
                     <li class="coffeetypes__item">
                         <img src="img/danche.png" alt="" class="coffeetypes__item-img" width="255" height="193">
-                        <h3 class="coffeetypes__item-heading">Danche</h3>
-                        <p class="coffeetypes__item-desc">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                        <div class="coffeetypes__item-content">
+                            <h3 class="coffeetypes__item-heading">Danche</h3>
+                            <p class="coffeetypes__item-desc">Ethiopian hand-harvested blend densely packed with vibrant fruit notes.</p>
+                        </div>
                     </li>
                 </ul>
-            </div>
-        </section>
-        <section class="about">
-            <div class="container about__container">
+            </section>
+            <section class="about">
                 <div class="about__heading-wrapper">
                     <h2 class="about__heading">
                         Why choose us?
@@ -95,42 +101,45 @@
                 <ul class="about__list">
                     <li class="about__item">
                         <img src="img/coffee-bean.svg" alt="" class="about__item-img" width="72" height="72">
-                        <h3 class="about__item-heading">
-                            Best quality
-                        </h3>
-                        <p class="about__item-desc">
-                            Discover an endless variety of the world’s best artisan coffee from each of our roasters.
-                        </p>
+                        <div class="about__item-content">
+                            <h3 class="about__item-heading">
+                                Best quality
+                            </h3>
+                            <p class="about__item-desc">
+                                Discover an endless variety of the world’s best artisan coffee from each of our roasters.
+                            </p>
+                        </div>
                     </li>
                     <li class="about__item">
                         <img src="img/gift.svg" alt="" class="about__item-img" width="72" height="72">
-                        <h3 class="about__item-heading">
-                            Exclusive benefits
-                        </h3>
-                        <p class="about__item-desc">
-                            Special offers and swag when you subscribe, including 30% off your first shipment.
-                        </p>
+                        <div class="about__item-content">
+                            <h3 class="about__item-heading">
+                                Exclusive benefits
+                            </h3>
+                            <p class="about__item-desc">
+                                Special offers and swag when you subscribe, including 30% off your first shipment.
+                            </p>
+                        </div>
                     </li>
                     <li class="about__item">
                         <img src="img/delivery.svg" alt="" class="about__item-img" width="72" height="50">
-                        <h3 class="about__item-heading">
-                            Free shipping
-                        </h3>
-                        <p class="about__item-desc">
-                            We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
-                        </p>
+                        <div class="about__item-content">
+                            <h3 class="about__item-heading">
+                                Free shipping
+                            </h3>
+                            <p class="about__item-desc">
+                                We cover the cost and coffee is delivered fast. Peak freshness: guaranteed.
+                            </p>
+                        </div>
                     </li>
                 </ul>
-            </div>
-        </section>
-        <section class="services">
-            <div class="container services__container">
+            </section>
+            <section class="services">
                 <h2 class="services__heading">
                     How it works
                 </h2>
                 <ol class="services__list">
                     <li class="services__item">
-                        <p class="services__item-num">01</p>
                         <h3 class="services__item-heading">
                             Pick your
 coffee
@@ -140,7 +149,6 @@ coffee
                         </p>
                     </li>
                     <li class="services__item">
-                        <p class="services__item-num">02</p>
                         <h3 class="services__item-heading">
                             Choose the frequency
                         </h3>
@@ -149,7 +157,6 @@ coffee
                         </p>
                     </li>
                     <li class="services__item">
-                        <p class="services__item-num">03</p>
                         <h3 class="services__item-heading">
                             Receive and enjoy!
                         </h3>
@@ -159,11 +166,9 @@ coffee
                     </li>
                 </ol>
                 <a href="#" class="primary-link">Create your plan</a>
-            </div>
-        </section>
-    </main>
-    <footer class="site-footer">
-        <div class="container site-footer__container">
+            </section>
+        </main>
+        <footer class="site-footer">
             <a href="#" class="logo-link">
                 <img src="img/foooter-logo.svg" alt="" class="logo-img" width="236" height="26">
             </a>
@@ -203,7 +208,7 @@ coffee
                     </a>
                 </li>
             </ul>
-        </div>
-    </footer>
+        </footer>
+    </div>
 </body>
 </html>
