--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normolize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>coffeeroasters</title>
 </head>
 <body>
     <div class="container">
@@ -193,17 +193,17 @@ coffee
             </nav>
             <ul class="site-footer__sm-list">
                 <li class="site-footer__sm-item">
-                    <a href="https://www.facebook.com/" class="site-footer__sm-link">
+                    <a href="https://www.facebook.com/" target="_blank" class="site-footer__sm-link">
                         <img src="img/facebook-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="24">
                     </a>
                 </li>
                 <li class="site-footer__sm-item">
-                    <a href="https://twitter.com/" class="site-footer__sm-link">
+                    <a href="https://twitter.com/" target="_blank" class="site-footer__sm-link">
                         <img src="img/twitter-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="20">
                     </a>
                 </li>
                 <li class="site-footer__sm-item">
-                    <a href="https://www.instagram.com/" class="site-footer__sm-link">
+                    <a href="https://www.instagram.com/" target="_blank" class="site-footer__sm-link">
                         <img src="img/instagram-logo.svg" alt="" class="site-footer__sm-logo" width="24" height="24">
                     </a>
                 </li>
