added-subscription-page

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
     <div class="container">
         <header class="site-header">
-            
             <a href="#" class="logo-link">
                 <img src="img/logo.svg" alt="" class="site-logo" width="236" height="26">
             </a>
             <nav class="sitenav">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./index.html" class="sitenav__link">
                             home
                         </a>
                     </li>
@@ -28,7 +27,7 @@
                         </a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./subscribe.html" class="sitenav__link">
                             Create your plan
                         </a>
                     </li>
@@ -175,7 +174,7 @@ coffee
             <nav class="sitenav sitenav--fot">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./index.html" class="sitenav__link">
                             home
                         </a>
                     </li>
@@ -185,7 +184,7 @@ coffee
                         </a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./subscribe.html" class="sitenav__link">
                             Create your plan
                         </a>
                     </li>
