--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         </a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./about-us.html" class="sitenav__link">
                             about us
                         </a>
                     </li>
@@ -179,7 +179,7 @@ coffee
                         </a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="#" class="sitenav__link">
+                        <a href="./about-us.html" class="sitenav__link">
                             about us
                         </a>
                     </li>
