compiled to scss

--- a/subscribe.html
+++ b/subscribe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>coffeeroasters</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
                     </p>
                 </div>
             </section>
-            <section class="services services--dark">
+            <section class="services--dark services">
                 <ol class="services__list">
                     <li class="services__item">
                         <h3 class="services__item-heading">
