edited all site from index to create your plan

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <a href="#" class="logo-link">
                 <img src="img/logo.svg" alt="" class="site-logo" width="236" height="26">
             </a>
+            <button type="button" class="burger-btn">
+                <span class="burger-btn__span burger-btn__top"></span>
+                <span class="burger-btn__span burger-btn__center"></span>
+                <span class="burger-btn__span burger-btn__bottom"></span>
+            </button>
             <nav class="sitenav">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
@@ -48,7 +53,7 @@
                         <p class="hero__desc">
                             Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.
                         </p>
-                        <a href="#" class="primary-link">Create your plan</a>
+                        <a href="subscribe.html" class="primary-link">Create your plan</a>
                 </div>
             </section>
             <section class="coffeetypes">
@@ -216,5 +221,6 @@ coffee
             </ul>
         </footer>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
