--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,11 @@
             <a href="#" class="logo-link">
                 <img src="img/logo.svg" alt="" class="site-logo" width="236" height="26">
             </a>
+            <button type="button" class="burger-btn">
+                <span class="burger-btn__span burger-btn__top"></span>
+                <span class="burger-btn__span burger-btn__center"></span>
+                <span class="burger-btn__span burger-btn__bottom"></span>
+            </button>
             <nav class="sitenav">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
@@ -159,5 +164,6 @@ Ontario M4P 1A6 <br>
             </ul>
         </footer>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
