--- a/subscribe.html
+++ b/subscribe.html
@@ -13,6 +13,11 @@
             <a href="#" class="logo-link">
                 <img src="img/logo.svg" alt="" class="site-logo" width="236" height="26">
             </a>
+            <button type="button" class="burger-btn">
+                <span class="burger-btn__span burger-btn__top"></span>
+                <span class="burger-btn__span burger-btn__center"></span>
+                <span class="burger-btn__span burger-btn__bottom"></span>
+            </button>
             <nav class="sitenav">
                 <ul class="sitenav__list">
                     <li class="sitenav__item">
@@ -21,7 +26,7 @@
                         </a>
                     </li>
                     <li class="sitenav__item">
-                        <a href="about-us.html" class="sitenav__link">
+                        <a href="./about-us.html" class="sitenav__link">
                             about us
                         </a>
                     </li>
@@ -76,34 +81,34 @@ coffee
             <section class="coffeecreate">
                 <ol class="coffeecreate__steps">
                     <li class="coffeecreate__item">
-                        <button class="coffeecreate__item-button">
+                        <a href="#Preferences" class="coffeecreate__item-button">
                             Preferences
-                        </button>
+                        </a>
                     </li>
                     <li class="coffeecreate__item">
-                        <button class="coffeecreate__item-button">
+                        <a href="#Bean Type" class="coffeecreate__item-button">
                             Bean Type
-                        </button>
+                        </a>
                     </li>
                     <li class="coffeecreate__item">
-                        <button class="coffeecreate__item-button">
+                        <a href="#Quantity" class="coffeecreate__item-button">
                             Quantity
-                        </button>
+                        </a>
                     </li>
                     <li class="coffeecreate__item">
-                        <button class="coffeecreate__item-button">
+                        <a href="#Grind Option" class="coffeecreate__item-button">
                             Grind Option
-                        </button>
+                        </a>
                     </li>
                     <li class="coffeecreate__item">
-                        <button class="coffeecreate__item-button">
+                        <a href="#Deliveries" class="coffeecreate__item-button">
                             Deliveries
-                        </button>
+                        </a>
                     </li>
                 </ol>
                 <form action="https://echo.htmlacademy.ru/" method="post" class="coffeecreate__form">
                     <ul class="coffeesteps">
-                        <li class="coffeesteps__step">
+                        <li id="Preferences" class="coffeesteps__step">
                             <h3 class="coffesteps__step-heading">
                                 How do you drink your coffee?
                             </h3>
@@ -149,7 +154,7 @@ coffee
                                 </li>
                             </ul>
                         </li>
-                        <li class="coffeesteps__step">
+                        <li id="Bean Type" class="coffeesteps__step">
                             <h3 class="coffesteps__step-heading">
                                 What type of coffee?
                             </h3>
@@ -195,7 +200,7 @@ coffee
                                 </li>
                             </ul>
                         </li>
-                        <li class="coffeesteps__step">
+                        <li id="Quantity" class="coffeesteps__step">
                             <h3 class="coffesteps__step-heading">
                                 How much would you like?
                             </h3>
@@ -241,7 +246,7 @@ coffee
                                 </li>
                             </ul>
                         </li>
-                        <li class="coffeesteps__step">
+                        <li id="Grind Option" class="coffeesteps__step">
                             <h3 class="coffesteps__step-heading">
                                 Want us to grind them?
                             </h3>
@@ -287,7 +292,7 @@ coffee
                                 </li>
                             </ul>
                         </li>
-                        <li class="coffeesteps__step">
+                        <li id="Deliveries" class="coffeesteps__step">
                             <h3 class="coffesteps__step-heading">
                                 How often should we deliver?
                             </h3>
@@ -339,7 +344,7 @@ coffee
                             Order Summary
                         </p>
                         <p class="coffeecreate__form-desc">
-                            “I drink my coffee as <span class="coffeecreate__form-desc-word">Filter</span>, with a <span class="coffeecreate__form-desc-word">Decaf</span> type of bean. <span class="coffeecreate__form-desc-word">250g</span> ground ala <span class="coffeecreate__form-desc-word">Cafetiére</span>, sent to me <span class="coffeecreate__form-desc-word">Every week</span>.”
+                            “I drink my coffee as <span id="how" class="coffeecreate__form-desc-word">...</span>, with a <span id="type" class="coffeecreate__form-desc-word">...</span> type of bean. <span id="amount" class="coffeecreate__form-desc-word">...</span> ground ala <span id="grind" class="coffeecreate__form-desc-word">...</span>, sent to me <span id="interval" class="coffeecreate__form-desc-word">...</span>.”
                         </p>
                     </div>
                     <button type="submit" class="primary-link coffeecreate__form-button">Create my plan!</button>
@@ -388,5 +393,7 @@ coffee
             </ul>
         </footer>
     </div>
+    <script src="js/main.js"></script>
+    <script src="js/subscribe.js"></script>
 </body>
 </html>
