--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" type = "image/svg" href="img/coffee-bean-logo.svg">
     <link rel="stylesheet" href="css/normolize.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>coffeeroasters</title>
+    <title>Coffeeroasters</title>
 </head>
 <body>
     <div class="container">
