--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ coffee
                         </p>
                     </li>
                 </ol>
-                <a href="#" class="primary-link">Create your plan</a>
+                <a href="subscribe.html" class="primary-link">Create your plan</a>
             </section>
         </main>
         <footer class="site-footer">
